package MVC.modelo.entity;

import javax.swing.*;
import java.util.List;

public interface Exportador {
//    void exportar(List<EventosIglesia> eventos);
    void exportar(JTable table);
}
