@startuml
package "P Registrar Actividades" #FFF2CC {
  class "FActividades" as factividades {
  -actividadesController: ActividadesController
  -modeloTabla: DefaultTableModel
  --
  -actualizarTabla():void
  -limpiarTabla(DefaultTableModel modelo)
  -getPanel(): JPanel
  }
  class "ActividadesController" as ctractividades{
      -AsistenciaEventosDAO asistenciaEventosDAO
      -EventosIglesiaDAO eventosIglesiaDAO
  --
  +crearActividad(EventosIglesia eventosIglesia)
  +obtenerActividad(): List<EventosIglesia>
  +exportarActividades(EventosIglesia eventosIglesia):void
  }

  class "AsistenciaEventosDAO" as daoasistenciaev{
  --
  +registrarAsistencia(AsistenciaEventos asistenciaEventos)
  }

  class "EventosIglesiaDAO" as daoeventoigle{
    --
    +crearEventoIglesia(EventosIglesia eventosIglesia)
    +obtenerEventosIglesia() :List<EventosIglesia>
  }

  class "BaseDAO" as daobase {
  --
  +obtenerConexion(): Connection
  +insertar(String tabla, Map<String, Object> campos): boolean
  +actualizar(String tabla, Map<String, Object> campos, String condicion): boolean
  +obtener(String tabla, String condicion, RowMapper<T> rowMapper): T
  +obtenerTodos(String tabla, RowMapper<T> rowMapper): List<T>
  +RowMapper<T>
  }
  class "ConexionBD" as bdconexion{
   -CONFIG_FILE: String
   --
      +establecerConexion(): Connection
  }
  entity "EventosIglesia" as eviglesia{
        - id: int
        - nombre_evento: String
        - descripcion: String
        - fecha_evento: Date
        - tipo_evento: String
      --
  }
   entity "AsistenciaEventos" as asisevento{
        -id: int
        -miembro_id: int
        - evento_id: int
        - asistio: Boolean
        --
    }
    interface Exportador{
    --
    +exportar(JTable table): void
    }
    abstract class ExportadorDecorador{
    #decorador:Exportador
    --
    +ExportadorDecorador(Exportador decorador)
    +exportar(JTable table):void
    }
    class "ExportadorPDF" as exPDF{
    - filePath:String
    --
    +ExportadorPDF(String filePath)
    +exportar(JTable table):void
    }
    class "ExportadorExcel" as exExcel{
     -filePath:String
     --
     +ExportadorExcel(String filePath)
     +exportar(JTable table):void
    }

  factividades --> ctractividades
  ctractividades --> daoasistenciaev
  ctractividades --> daoeventoigle
  ctractividades --> Exportador
  daobase <|-- daoasistenciaev
  daobase <|-- daoeventoigle
  daobase -->bdconexion
  ctractividades ..> eviglesia
  ctractividades ..> asisevento
  daoasistenciaev ..> asisevento
  daoeventoigle ..> eviglesia
  Exportador <|.. ExportadorDecorador
  Exportador <|.. exPDF
  Exportador <|.. exExcel
  ExportadorDecorador o-- Exportador

}

@enduml